fixed light mode spacing issue

--- a/src/App.css
+++ b/src/App.css
@@ -61,8 +61,6 @@
     margin-bottom: 40px;
     z-index: -1000;
     padding-bottom: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
 }
 
 #photo-grid-dark-mode {
